tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_62.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := (- y);
               y := y;
               x := z;
               z := (x DIV (2 DIV 1223));
               x := 1223;
  (* error *)  r := (~ (z >= (0 * (+ p))));
               y := (1223 MOD (- y));
               y := 0;
               q := q;
               x := (2 + 200)
END Test16.